--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,15 +1,33 @@
-@import 'tailwindcss';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@keyframes slideInTopRight {
+    from {
+        transform: translate(150px, -150px);
+        opacity: 0;
+    }
+    to {
+        transform: translate(0, 0);
+        opacity: 1;
+    }
+}
 
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
+@keyframes slideInBottomLeft {
+    from {
+        transform: translate(-150px, 150px);
+        opacity: 0;
+    }
+    to {
+        transform: translate(0, 0);
+        opacity: 1;
+    }
+}
 
-@theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+.animate-slide-in-top-right {
+    animation: slideInTopRight 1.5s ease-out forwards;
+}
+
+.animate-slide-in-bottom-left {
+    animation: slideInBottomLeft 1.5s ease-out forwards;
 }
